# ascii-art

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  Status.toml  build  compile  status.toml  text.txt
src/: edges.rs  image.cpp  main.cpp  main.rs  parameters.rs  parser.rs
src/headers/: image.h
src/lib/: image.cpp
